Fix bottom spacing on spec

--- a/assets/css/spec.scss
+++ b/assets/css/spec.scss
@@ -14,9 +14,6 @@ tr {
 p {
   @apply py-2;
 }
-div.footer {
-  @apply mt-32;
-}
 code {
   @apply bg-gray-100 p-1;
 }
